# POCCMakeExternalLibs

./: Dockerfile  LICENSE  POCCMakeExternalLibs.code-workspace
.devcontainer/: devcontainer.json
Server/: CMakeLists.txt
Server/include/: HelloRequestHandler.h  WebServerApp.h
Server/include/factory/: HelloRequestHandlerFactory.h
Server/src/: HelloRequestHandler.cpp  WebServerApp.cpp
XMLSerializer/: CMakeLists.txt
XMLSerializer/include/: HelloXML.h
XMLSerializer/src/: HelloXML.cpp
